2026/10/01/容器29-PodIP与Service/c29-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: c29-deny-other-ingress
spec:
  podSelector:
    matchLabels:
      app: c29-backend
  policyTypes:
    - Ingress
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: c29-allow-selected-client
spec:
  podSelector:
    matchLabels:
      app: c29-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: c29-allowed
      ports:
        - protocol: TCP
          port: 18080
